[AS-16] - gap fix

--- a/frontend/src/app/(dashboard)/broadcasts/components/InputMsg/styles.module.css
+++ b/frontend/src/app/(dashboard)/broadcasts/components/InputMsg/styles.module.css
@@ -19,3 +19,8 @@
   display: grid;
   gap: 1rem;
 }
+
+.container {
+  display: grid;
+  gap: 0.25rem;
+}
